test/classes/errors/nilability-init-field-dflt/init-field-dflt-nonnil-shared-from-oknil-nil.good
init-field-dflt-nonnil-shared-from-oknil-nil.chpl:11: error: Cannot initialize 'shared MyClass' from 'nil'
